fixed some alignments

--- a/www/src/styles/components/_game-screen.scss
+++ b/www/src/styles/components/_game-screen.scss
@@ -25,7 +25,6 @@
     background: none !important;
 
     .player-label {
-      width: auto;
       margin-top: 20vw;
 
       h2 {
@@ -58,6 +57,9 @@
   }
 
   .board.size-10 {
+    position: absolute;
+    top: 28vw;
+    left: 2vw;
     margin-top: 16vw;
     width: 95vw;
     height: 95vw;
@@ -88,6 +90,9 @@
   }
 
   .board.size-12 {
+    position: absolute;
+    top: 28vw;
+    left: 2vw;
     margin-top: 16vw;
     width: 95vw;
     height: 95vw;
@@ -128,7 +133,7 @@
     background: none !important;
 
     .player-label {
-
+      width: 20vw !important;
       margin-top: 5vw;
 
       h2 {
@@ -147,6 +152,9 @@
 
 
   .board.size-10 {
+    position: absolute;
+    top: 18vw;
+    left: 5vw;
     margin-top: 15vw;
     width: 90vw;
     height: 90vw;
@@ -175,6 +183,9 @@
   }
 
   .board.size-12 {
+    position: absolute;
+    top: 18vw;
+    left: 5vw;
     margin-top: 15vw;
     width: 90vw;
     height: 90vw;
@@ -209,6 +220,9 @@
 @media screen and (min-width: 1026px) {
 
   .board.size-10 {
+    position: absolute;
+    top: 8vw;
+    left: 28.5vw;
     width: 43vw;
     height: 43vw;
     font-size: 0; /* This solves the whitespace problem on the board. */
@@ -236,6 +250,9 @@
   }
 
   .board.size-12 {
+    position: absolute;
+    top: 8vw;
+    left: 28.5vw;
     width: 43vw;
     height: 43vw;
 
